crates/kadou-core/tests/snapshots/header_fixtures__bad_unknown_key.snap
---
source: crates/kadou-core/tests/header_fixtures.rs
expression: diags
---
[
    Diagnostic {
        severity: Error,
        message: "unknown key `scope`",
        fix: Some(
            "known keys are about, risk, needs, args, alias, timeout",
        ),
        line: 5,
        col: 3,
        len: 5,
    },
]
