crates/kadou-core/tests/snapshots/header_fixtures__good_full.snap
---
source: crates/kadou-core/tests/header_fixtures.rs
expression: header
---
ParsedHeader {
    about: "Trigger a branch pipeline",
    risk: Medium,
    needs: [
        Need {
            name: "jenkins_url",
            default: Some(
                "https://ci.example.com",
            ),
        },
        Need {
            name: "jenkins_user",
            default: None,
        },
        Need {
            name: "jenkins_token",
            default: None,
        },
    ],
    args: [
        Arg {
            name: "branch",
            ty: Text,
            default: Some(
                Text(
                    "dev",
                ),
            ),
            help: Some(
                "Branch, tag, or PR to trigger",
            ),
        },
        Arg {
            name: "version",
            ty: Text,
            default: Some(
                Text(
                    "",
                ),
            ),
            help: Some(
                "Falls back to branch when blank",
            ),
        },
        Arg {
            name: "send_email",
            ty: Bool,
            default: Some(
                Bool(
                    true,
                ),
            ),
            help: Some(
                "Send email on completion",
            ),
        },
        Arg {
            name: "k8s_context",
            ty: Select {
                options: [
                    "dev",
                    "uat",
                    "prod",
                ],
            },
            default: Some(
                Select(
                    "dev",
                ),
            ),
            help: Some(
                "Target environment",
            ),
        },
        Arg {
            name: "retries",
            ty: Int,
            default: Some(
                Int(
                    3,
                ),
            ),
            help: None,
        },
    ],
    alias: [
        "deploy",
        "quick-deploy",
    ],
    timeout: Some(
        600s,
    ),
    notes: Some(
        "Usage notes: run this from a checked-out branch.",
    ),
    shebang: Some(
        "#!/bin/sh",
    ),
}
