crates/kadou-core/tests/snapshots/header_fixtures__good_minimal.snap
---
source: crates/kadou-core/tests/header_fixtures.rs
expression: header
---
ParsedHeader {
    about: "Print a greeting",
    risk: Low,
    needs: [],
    args: [],
    alias: [],
    timeout: None,
    notes: None,
    shebang: Some(
        "#!/bin/sh",
    ),
}
