crates/kadou-core/tests/snapshots/header_fixtures__good_no_shebang.snap
---
source: crates/kadou-core/tests/header_fixtures.rs
expression: header
---
ParsedHeader {
    about: "List a directory",
    risk: Low,
    needs: [],
    args: [
        Arg {
            name: "target_dir",
            ty: Text,
            default: Some(
                Text(
                    ".",
                ),
            ),
            help: None,
        },
    ],
    alias: [],
    timeout: None,
    notes: None,
    shebang: None,
}
